@@ -1,5 +1,5 @@
 <?php
-// $Id: common.inc,v 1.434.2.21 2006-08-27 07:53:32 unconed Exp $
+// $Id: common.inc,v 1.434.2.22 2006-10-18 20:14:08 killes Exp $
 
 /**
  * @file
@@ -912,6 +912,61 @@ function format_name($object) {
  */
 
 /**
+ * Check the form token if there is POST data for an authenticated user to defend against cross site request forgeries. 
+ * 
+ * $_POST will be cleared if the token is absent or incorrect.
+ * 
+ */
+function drupal_check_token() {
+  global $user; 
+  if ($user->uid && ($_SERVER['REQUEST_METHOD'] == 'POST') && !(isset($_POST['edit']) && isset($_POST['edit']['token']) && drupal_valid_token($_POST['edit']['token']))) {
+    drupal_set_message(t('Validation error. Please try again.'), 'error');
+    $_POST = array();
+  }
+}
+
+/**
+ * Ensure the private key variable used to generate tokens is set.
+ * 
+ * @return 
+ *   The private key
+ */
+function drupal_get_private_key() {   
+  if (!($key = variable_get('drupal_private_key', 0))) {
+    $key = mt_rand();
+    variable_set('drupal_private_key', $key);
+  }
+  return $key;
+}
+
+/**
+ * Generate a token based on $value, the current user session and private key.
+ * 
+ * @param $value
+ *   An additional value to base the token on
+ */
+function drupal_get_token($value = '') {
+  $private_key = drupal_get_private_key();
+  return md5(session_id() . $value . $private_key);
+}
+
+/**
+ * Validate a token based on $value, the current user session and private key or penultimate private key.
+ * 
+ * @param $token
+ *   The token to be validated.
+ * @param $value
+ *   An additional value to base the token on
+ * @return 
+ *   True for a valid token, False for an invalid token.
+ */
+function drupal_valid_token($token, $value = '') {  
+  return ($token == md5(session_id() . $value . variable_get('drupal_private_key', '')));    
+}
+
+
+
+/**
  * @defgroup form Form generation
  * @{
  * Functions to enable output of HTML forms and form elements.
@@ -920,6 +975,13 @@ function format_name($object) {
  * while at the same time simplifying code and reducing the amount of HTML that
  * must be explicitly generated by modules.
  */
+
+/**
+ * Generate a form token based on the session and the private key to defend against cross site request forgeries.
+ */
+function form_token() { 
+  return form_hidden('token', drupal_get_token());
+}
 
 /**
  * Generate a form from a set of form elements.
@@ -939,7 +1001,7 @@ function form($form, $method = 'post', $action = NULL, $attributes = NULL) {
   if (!$action) {
     $action = request_uri();
   }
-  return '<form action="'. check_url($action) .'" method="'. $method .'"'. drupal_attributes($attributes) .">\n". $form ."\n</form>\n";
+  return '<form action="'. check_url($action) .'" method="'. $method .'"'. drupal_attributes($attributes) .">\n". $form . form_token() ."\n</form>\n";
 }
 
 /**
@@ -1600,7 +1662,7 @@ function drupal_xml_parser_create(&$data) {
       $data = ereg_replace('^(<\?xml[^>]+encoding)="([^"]+)"', '\\1="utf-8"', $out);
     }
     else {
-      watchdog('php', t("Could not convert XML encoding '%s' to UTF-8.", array('%s' => $encoding)), WATCHDOG_WARNING);
+      watchdog('php', t("Could not convert XML encoding '%s' to UTF-8.", array('%s' => theme('placeholder', $encoding))), WATCHDOG_WARNING);
       return 0;
     }
   }
