@@ -1,5 +1,5 @@
 <?php
-// $Id: forum.module,v 1.243.2.12 2005-10-28 13:41:38 dries Exp $
+// $Id: forum.module,v 1.243.2.13 2006-10-18 20:14:08 killes Exp $
 
 /**
  * @file
@@ -777,7 +777,7 @@ function theme_forum_display($forums, $topics, $parents, $tid, $sortby, $forum_p
     }
   }
 
-  drupal_set_title($title);
+  drupal_set_title(check_plain($title));
 
   $breadcrumb[] = array('path' => $_GET['q']);
   menu_set_location($breadcrumb);
